--- a/Hackaton 1/Hackathon 1.ipynb
+++ b/Hackaton 1/Hackathon 1.ipynb
@@ -103,9 +103,82 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Import necessary libraries\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+     ]
+    }
+   ],
+   "source": [
+    "# Import necessary libraries\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from scipy import stats\n",
+    "import statsmodels.api as sm\n",
+    "from statsmodels.tsa.ar_model import AutoReg\n",
+    "from sklearn.metrics import mean_absolute_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here\n"
+    "# Set visualization style\n",
+    "sns.set(style=\"whitegrid\")\n",
+    "\n",
+    "# Load datasets\n",
+    "# Assuming the datasets are named 'BeijingPM.csv' and 'ShanghaiPM.csv'\n",
+    "beijing_df = pd.read_csv('BeijingPM.csv')\n",
+    "shanghai_df = pd.read_csv('ShanghaiPM.csv')\n",
+    "\n",
+    "# Display first few rows to understand the data structure\n",
+    "print(\"Beijing Data:\")\n",
+    "print(beijing_df.head())\n",
+    "print(\"\\nShanghai Data:\")\n",
+    "print(shanghai_df.head())\n",
+    "\n",
+    "# Filter data between 1/1/2012 and 31/12/2015\n",
+    "def filter_date(df):\n",
+    "    df['date'] = pd.to_datetime(df[['year', 'month', 'day', 'hour']])\n",
+    "    start_date = pd.to_datetime('2012-01-01')\n",
+    "    end_date = pd.to_datetime('2015-12-31 23:00:00')\n",
+    "    return df[(df['date'] >= start_date) & (df['date'] <= end_date)]\n",
+    "\n",
+    "beijing_filtered = filter_date(beijing_df)\n",
+    "shanghai_filtered = filter_date(shanghai_df)\n",
+    "\n",
+    "# Remove rows with NA in PM2.5\n",
+    "beijing_filtered = beijing_filtered.dropna(subset=['PM'])\n",
+    "shanghai_filtered = shanghai_filtered.dropna(subset=['PM'])\n",
+    "\n",
+    "# Merge datasets on date\n",
+    "merged_df = pd.merge(beijing_filtered, shanghai_filtered, on='date', suffixes=('_Beijing', '_Shanghai'))\n",
+    "\n",
+    "# Keep only rows where PM2.5 is available for both cities\n",
+    "merged_df = merged_df.dropna(subset=['PM_Beijing', 'PM_Shanghai'])\n",
+    "\n",
+    "# Split data into winter (season=4) and summer (season=2) for both cities\n",
+    "winter_beijing = merged_df[merged_df['season_Beijing'] == 4]['PM_Beijing']\n",
+    "summer_beijing = merged_df[merged_df['season_Beijing'] == 2]['PM_Beijing']\n",
+    "\n",
+    "winter_shanghai = merged_df[merged_df['season_Shanghai'] == 4]['PM_Shanghai']\n",
+    "summer_shanghai = merged_df[merged_df['season_Shanghai'] == 2]['PM_Shanghai']\n",
+    "\n",
+    "print(f\"Winter Beijing samples: {winter_beijing.shape[0]}\")\n",
+    "print(f\"Summer Beijing samples: {summer_beijing.shape[0()]}\")\n",
+    "print(f\"Winter Shanghai samples: {winter_shanghai.shape[0]}\")\n",
+    "print(f\"Summer Shanghai samples: {summer_shanghai.shape[0]}\")"
    ]
   },
   {
@@ -516,7 +589,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
