--- a/Hackaton 1/Hackathon 1.ipynb
+++ b/Hackaton 1/Hackathon 1.ipynb
@@ -31,17 +31,17 @@
     "\n",
     "## Names and Noma of participants:\n",
     "\n",
-    "Part. 1: \n",
+    "Part. 1: REGOUT Arthur\n",
     "\n",
-    "Part. 2:\n",
+    "Part. 2: PLATIAUX Valère\n",
     "\n",
-    "Part. 3:\n",
+    "Part. 3: MARCHAND Philippine\n",
     "\n",
-    "Part. 4:\n",
+    "Part. 4: DE WALQUE Jean\n",
     "\n",
-    "Part. 5:\n",
+    "Part. 5: MAUS Sosthène\n",
     "\n",
-    "Part. 6:\n"
+    "Part. 6: DE CUMONT Gaston\n"
    ]
   },
   {
@@ -118,17 +118,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:43: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?\n",
-      "<>:43: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -168,19 +160,11 @@
       "1  59.48  1025.1   1.0   SE  2.0            0.0    0.0  \n",
       "2  59.21  1025.1   0.0   SE  4.0            0.0    0.0  \n",
       "3  63.94  1024.0   0.0   SE  5.0            0.0    0.0  \n",
-      "4  63.94  1023.0   0.0   SE  8.0            0.0    0.0  \n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "['PM']",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_21116\\3770021623.py\u001b[0m in \u001b[0;36m?\u001b[1;34m()\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[0mbeijing_filtered\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfilter_date\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbeijing_df\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[0mshanghai_filtered\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfilter_date\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mshanghai_df\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[1;31m# Remove rows with NA in PM2.5\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 26\u001b[1;33m \u001b[0mbeijing_filtered\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbeijing_filtered\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdropna\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msubset\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'PM'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     27\u001b[0m \u001b[0mshanghai_filtered\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mshanghai_filtered\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdropna\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msubset\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'PM'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     29\u001b[0m \u001b[1;31m# Merge datasets on date\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Python312\\Lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m?\u001b[1;34m(self, axis, how, thresh, subset, inplace, ignore_index)\u001b[0m\n\u001b[0;32m   6666\u001b[0m             \u001b[0max\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_get_axis\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0magg_axis\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6667\u001b[0m             \u001b[0mindices\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0max\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_indexer_for\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msubset\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6668\u001b[0m             \u001b[0mcheck\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mindices\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6669\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mcheck\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0many\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 6670\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msubset\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcheck\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   6671\u001b[0m             \u001b[0magg_obj\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtake\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindices\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0magg_axis\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6672\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6673\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mthresh\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mno_default\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: ['PM']"
+      "4  63.94  1023.0   0.0   SE  8.0            0.0    0.0  \n",
+      "Winter Beijing samples: 8283\n",
+      "Summer Beijing samples: 8300\n",
+      "Winter Shanghai samples: 8283\n",
+      "Summer Shanghai samples: 8300\n"
      ]
     }
    ],
@@ -210,24 +194,24 @@
     "shanghai_filtered = filter_date(shanghai_df)\n",
     "\n",
     "# Remove rows with NA in PM2.5\n",
-    "beijing_filtered = beijing_filtered.dropna(subset=['PM'])\n",
-    "shanghai_filtered = shanghai_filtered.dropna(subset=['PM'])\n",
+    "beijing_filtered = beijing_filtered.dropna(subset=['PM_US Post'])\n",
+    "shanghai_filtered = shanghai_filtered.dropna(subset=['PM_US Post'])\n",
     "\n",
     "# Merge datasets on date\n",
     "merged_df = pd.merge(beijing_filtered, shanghai_filtered, on='date', suffixes=('_Beijing', '_Shanghai'))\n",
     "\n",
     "# Keep only rows where PM2.5 is available for both cities\n",
-    "merged_df = merged_df.dropna(subset=['PM_Beijing', 'PM_Shanghai'])\n",
+    "merged_df = merged_df.dropna(subset=['PM_US Post_Beijing', 'PM_US Post_Shanghai'])\n",
     "\n",
     "# Split data into winter (season=4) and summer (season=2) for both cities\n",
-    "winter_beijing = merged_df[merged_df['season_Beijing'] == 4]['PM_Beijing']\n",
-    "summer_beijing = merged_df[merged_df['season_Beijing'] == 2]['PM_Beijing']\n",
+    "winter_beijing = merged_df[merged_df['season_Beijing'] == 4]['PM_US Post_Beijing']\n",
+    "summer_beijing = merged_df[merged_df['season_Beijing'] == 2]['PM_US Post_Beijing']\n",
     "\n",
-    "winter_shanghai = merged_df[merged_df['season_Shanghai'] == 4]['PM_Shanghai']\n",
-    "summer_shanghai = merged_df[merged_df['season_Shanghai'] == 2]['PM_Shanghai']\n",
+    "winter_shanghai = merged_df[merged_df['season_Shanghai'] == 4]['PM_US Post_Shanghai']\n",
+    "summer_shanghai = merged_df[merged_df['season_Shanghai'] == 2]['PM_US Post_Shanghai']\n",
     "\n",
     "print(f\"Winter Beijing samples: {winter_beijing.shape[0]}\")\n",
-    "print(f\"Summer Beijing samples: {summer_beijing.shape[0()]}\")\n",
+    "print(f\"Summer Beijing samples: {summer_beijing.shape[0]}\")\n",
     "print(f\"Winter Shanghai samples: {winter_shanghai.shape[0]}\")\n",
     "print(f\"Summer Shanghai samples: {summer_shanghai.shape[0]}\")"
    ]
@@ -241,11 +225,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                       Mean      Variance  Median  25% Quantile  75% Quantile\n",
+      "Beijing Winter   122.404926  15602.260067    82.0          21.0         180.0\n",
+      "Beijing Summer    71.840843   2978.227347    59.0          30.0         100.0\n",
+      "Shanghai Winter   76.270071   3310.005657    60.0          36.0          99.0\n",
+      "Shanghai Summer   33.891807    611.481485    29.0          16.0          46.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code here\n"
+    "# Calculate statistics\n",
+    "def calculate_statistics(series):\n",
+    "    return {\n",
+    "        'Mean': series.mean(),\n",
+    "        'Variance': series.var(),\n",
+    "        'Median': series.median(),\n",
+    "        '25% Quantile': series.quantile(0.25),\n",
+    "        '75% Quantile': series.quantile(0.75)\n",
+    "    }\n",
+    "\n",
+    "# Compute statistics for each sample\n",
+    "stats_winter_beijing = calculate_statistics(winter_beijing)\n",
+    "stats_summer_beijing = calculate_statistics(summer_beijing)\n",
+    "stats_winter_shanghai = calculate_statistics(winter_shanghai)\n",
+    "stats_summer_shanghai = calculate_statistics(summer_shanghai)\n",
+    "\n",
+    "# Create a DataFrame to display the results\n",
+    "stats_df = pd.DataFrame({\n",
+    "    'Beijing Winter': stats_winter_beijing,\n",
+    "    'Beijing Summer': stats_summer_beijing,\n",
+    "    'Shanghai Winter': stats_winter_shanghai,\n",
+    "    'Shanghai Summer': stats_summer_shanghai\n",
+    "})\n",
+    "\n",
+    "# Transpose for better readability\n",
+    "stats_df = stats_df.transpose()\n",
+    "\n",
+    "# Display the table\n",
+    "print(stats_df)"
    ]
   },
   {
