--- a/Hackaton 1/Hackathon 1.ipynb
+++ b/Hackaton 1/Hackathon 1.ipynb
@@ -111,7 +111,6 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy import stats\n",
     "import statsmodels.api as sm\n",
-    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_absolute_error"
    ]
   },
@@ -384,20 +383,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                 Shape (k)   Scale (θ)  Log-Likelihood\n",
-      "Beijing Winter    0.939867  130.236466   -48091.586067\n",
-      "Beijing Summer    1.700798   42.239487   -43175.928971\n",
-      "Shanghai Winter   2.250154   33.895495   -42926.791179\n",
-      "Shanghai Summer   1.758744   19.270458   -36870.989338\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -471,39 +459,12 @@
        "3  Shanghai  Summer   1.758744   19.270458   -36870.989338"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Function to fit Gamma distribution with loc=0\n",
-    "def fit_gamma(data):\n",
-    "    # Fit Gamma with fixed loc=0\n",
-    "    shape, loc, scale = stats.gamma.fit(data, floc=0)\n",
-    "    log_likelihood = np.sum(stats.gamma.logpdf(data, a=shape, loc=loc, scale=scale))\n",
-    "    return shape, scale, log_likelihood\n",
-    "\n",
-    "# Fit Gamma distributions\n",
-    "gamma_params = {\n",
-    "    'Beijing Winter': fit_gamma(winter_beijing),\n",
-    "    'Beijing Summer': fit_gamma(summer_beijing),\n",
-    "    'Shanghai Winter': fit_gamma(winter_shanghai),\n",
-    "    'Shanghai Summer': fit_gamma(summer_shanghai)\n",
-    "}\n",
-    "\n",
-    "# Create a DataFrame to display the results\n",
-    "gamma_df = pd.DataFrame(gamma_params, index=['Shape (k)', 'Scale (θ)', 'Log-Likelihood']).T\n",
-    "\n",
-    "# Display the table\n",
-    "print(gamma_df)\n",
-    "\n",
-    "from scipy import stats\n",
-    "import numpy as np\n",
-    "\n",
-    "# Filter data for Beijing (PM_US Post) and Shanghai (PM_Dongsihuan) \n",
-    "# during winter (season 1) and summer (season 3)\n",
-    "\n",
     "# Define the seasons for filtering: 1 - Winter (Dec, Jan, Feb), 3 - Summer (Jun, Jul, Aug)\n",
     "beijing_winter = winter_beijing\n",
     "beijing_summer = summer_beijing\n",
@@ -553,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -568,10 +529,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "from scipy import stats\n",
-    "\n",
     "# Function to plot histogram and Gamma PDF\n",
     "def plot_histogram_with_gamma(data, params, title):\n",
     "    # Plot histogram of data\n",
@@ -612,7 +569,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Comments here:\n"
+    "Comments here:\n",
+    "* **Beijing Winter**:\n",
+    "The shape parameter (k) is less than 1, which indicates a highly skewed distribution with a long tail. The PM2.5 concentrations are mostly concentrated around low values, but there are some extreme high values stretching the distribution tail.\n",
+    "The log-likelihood is relatively low, indicating a moderate fit with the Gamma distribution.\n",
+    "\n",
+    "* **Beijing Summer**:\n",
+    "With a shape parameter (k) greater than 1, the distribution becomes more balanced, though still skewed. PM2.5 concentrations are more evenly spread across moderate values.\n",
+    "The scale (θ) is smaller, suggesting lower PM2.5 concentrations in the summer.\n",
+    "The log-likelihood is slightly better than in winter, reflecting a somewhat better fit for the Gamma distribution.\n",
+    "\n",
+    "* **Shanghai Winter**:\n",
+    "A larger shape (k) (2.25) indicates a more symmetric distribution, closer to a normal shape. PM2.5 concentrations are more centered around the mean.\n",
+    "The scale (θ) is smaller compared to Beijing, meaning that PM2.5 levels are generally lower in Shanghai during winter.\n",
+    "The log-likelihood is quite similar to the other seasons, but the distribution seems to fit better due to a better shape match.\n",
+    "\n",
+    "* **Shanghai Summer**:\n",
+    "The shape (k) is similar to Beijing Summer, but the scale (θ) is even smaller, indicating that PM2.5 concentrations are generally lower in Shanghai during the summer.\n",
+    "The log-likelihood is the best here, suggesting that the Gamma model fits the Shanghai summer PM2.5 data relatively well."
    ]
   },
   {
@@ -632,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +735,7 @@
        "3                46.005220                         46.0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +766,7 @@
     "    '75th Percentile (Gamma)': [beijing_winter_stats[2][2], beijing_summer_stats[2][2], shanghai_winter_stats[2][2], shanghai_summer_stats[2][2]]\n",
     "}\n",
     "\n",
-    "# Calculate empirical statistics from the actual data\n",
+    "# Calculate empirical statistics from the actual data (we recalculate those values (calculated in ex 1.) because we are now using lists instead of dictionaries)\n",
     "def calculate_empirical_statistics(data):\n",
     "    mean = np.mean(data)\n",
     "    std_dev = np.std(data)\n",
@@ -831,6 +805,17 @@
    "metadata": {},
    "source": [
     "Comments here:\n",
+    "1. Mean:\n",
+    "The means for both the Gamma distribution and the empirical data align perfectly across all four cases (Beijing and Shanghai, in winter and summer). This consistency shows that the Gamma distribution is accurately capturing the central tendency of the data in each season and city.\n",
+    "2. Standard Deviation:\n",
+    "Beijing Winter: The Gamma estimate (126.26) is slightly higher than the empirical standard deviation (124.90), indicating a small overestimation of variability.\n",
+    "Beijing Summer: The Gamma and empirical values are closely aligned (55.09 vs. 54.57), showing that the Gamma distribution is a good fit in terms of variability.\n",
+    "Shanghai Winter: The Gamma estimate (50.84) is lower than the empirical standard deviation (57.53), which could imply that the Gamma distribution is underestimating the variability in Shanghai's winter PM2.5 emissions.\n",
+    "Shanghai Summer: The standard deviations are quite close (25.56 vs. 24.73), showing a good fit in terms of variability for summer in Shanghai.\n",
+    "3. Percentiles:\n",
+    "25th Percentile: The Gamma distribution underestimates the 25th percentile in all cases, especially for Beijing Winter (32.99 vs. 21.0), indicating that the distribution has a heavier tail in the lower region than the empirical data.\n",
+    "50th Percentile (Median): Gamma and empirical medians are similar in all cases, which suggests that the distribution’s central values match well with empirical values.\n",
+    "75th Percentile: The Gamma distribution fits the 75th percentile closely, particularly for Shanghai (winter and summer). The match for Beijing in winter and summer is fairly close, but minor discrepancies suggest that the Gamma distribution may slightly underestimate upper-range values in some cases.\n",
     "\n"
    ]
   },
@@ -904,15 +889,15 @@
     "\n",
     "plt.subplot(1, 2, 1)\n",
     "plt.hist(alpha_estimates, bins=30, color='blue', alpha=0.7, label=\"Alpha Estimates\")\n",
-    "plt.title(\"Histogram of Alpha (Shape) Estimates\")\n",
+    "plt.title(\"Alpha estimation\")\n",
     "plt.xlabel(\"Alpha\")\n",
-    "plt.ylabel(\"Frequency\")\n",
+    "plt.ylabel(\"Number of cases\")\n",
     "\n",
     "plt.subplot(1, 2, 2)\n",
     "plt.hist(scale_estimates, bins=30, color='green', alpha=0.7, label=\"Scale Estimates\")\n",
-    "plt.title(\"Histogram of Scale Estimates\")\n",
+    "plt.title(\"Beta estimation\")\n",
     "plt.xlabel(\"Scale\")\n",
-    "plt.ylabel(\"Frequency\")\n",
+    "plt.ylabel(\"Number of cases\")\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
@@ -930,7 +915,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Comments here:\n"
+    "Comments here:\n",
+    "1. Histograms of the Bootstrapped Alpha and Scale Estimates:\n",
+    "Alpha (Shape) Estimates: The histogram of the alpha estimates is roughly bell-shaped and symmetric. The majority of estimates fall between 0.92 and 0.97, indicating a consistent estimate for the shape parameter across bootstrapped samples.\n",
+    "Scale Estimates: The scale estimates also exhibit a normal-like distribution centered around 126 to 130, showing stable and consistent results across the 1000 bootstraps.\n",
+    "2. 5% Confidence Interval for Alpha:\n",
+    "The 95% confidence interval for the alpha parameter is [0.920, 0.962].\n",
+    "This interval is relatively narrow, indicating that the estimates of the alpha parameter are fairly precise, and there isn't much variability in the bootstrapped results.\n",
+    "The confidence interval suggests that we can be 95% confident that the true value of the alpha parameter for Beijing winter PM2.5 emissions lies within this range.\n",
+    "3. Interpretation of Accuracy:\n",
+    "Given the narrow confidence interval and the symmetric shape of the histograms, we can conclude that the MLE estimates for both the alpha and scale parameters are accurate and stable.\n",
+    "The consistent results across the 1000 bootstrapped samples indicate that the MLE method is robust and provides reliable parameter estimates for the Gamma distribution fitted to the Beijing winter PM2.5 data.\n",
+    "The overall accuracy is good, with minimal variability in both the shape (alpha) and scale estimates."
    ]
   },
   {
