--- a/Hackaton 1/Hackathon 1.ipynb
+++ b/Hackaton 1/Hackathon 1.ipynb
@@ -35,9 +35,9 @@
     "\n",
     "Part. 2: Valère PLATIAUX 90682100\n",
     "\n",
-    "Part. 3: Philipinne MARCHAND 49912200\n",
+    "Part. 3: Philippine MARCHAND 49912200\n",
     "\n",
-    "Part. 4: Sostène MAUS 80342100\n",
+    "Part. 4: Sosthène MAUS 80342100\n",
     "\n",
     "Part. 5: Jean DE WALQUE\n",
     "\n",
